# myCppProjects

./: .gitignore  d  dqqq
Kursverwaltung/: main.cpp
ThreadSynchroniser/: CMakeLists.txt  README.md
ThreadSynchroniser/include/: thread_synchronizer.h
ThreadSynchroniser/src/: main.cpp  thread_synchronization_test.cpp  thread_synchronizer.cpp
ThreadSynchroniser/src/tests/: CMakeLists.txt  thread_synchroniser.cpp
ThreadSynchroniser/src/thread_synchroniser/: thread_synchroniser.cpp  thread_synchroniser.h
fraction/: Fraction.cpp  Fraction.h  main.cpp
kontaktmanager/: kontakt.cpp  kontakt.h  kontakt.txt  kontaktmanager.cpp  kontaktmanager.h  main.cpp
matermindspiel/: MastermindDigits.cpp  MastermindDigits.h  main.cpp
schachspiel/: main.c  spielfigur
